@@ -1,5 +1,13 @@
 2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/mozilla-embed-single.cpp:
+	R embed/mozilla/MozillaPrivate.cpp:
+	R embed/mozilla/MozillaPrivate.h:
+	
+	Remove unused files.
+
+2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/EventContext.cpp:
 	
 	Don't start search on <embed> and <object> elements.
